syntax = "proto3";

package audiohq;

message Entry {
    string id = 1;
    repeated string path = 2;
    string name = 3;
    sint32 ordering = 4;
    
    oneof value {
        Single single = 5;
        bool is_folder = 6;
    }
}

message Single {
    reserved 1, 5;

    string description = 6;
    uint64 length = 7;
    string url = 8;
}

message SingleMutate {
    string description = 6;
}

message ListEntriesResponse {
    repeated Entry entries = 1;
}

message EntryMutate {
    repeated string path = 1;
    string name = 2;
    sint32 ordering = 3;

    oneof mutation {
        bool is_folder = 4;
        SingleMutate single = 5;
    }
}
