syntax = "proto3";

package audiohq;

message Workspace {
    string id = 1;
    string name = 2;
    uint64 createdAt = 3;
    uint64 updatedAt = 4;
}

message WorkspaceMutate {
    string name = 1;
}

message WorkspaceSearchResponse {
    repeated Workspace results = 1;
}